[project]
name = "vk-nodes"
description = "ComfyUI nodes to simplify my tiled render"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/VK/vk-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "vk-nodes"
Icon = ""
